# project-triangulation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  README.md  build.sh  cmake_install.cmake  ex.cpp  opt_algorithms.cpp  opt_algorithms.hpp  output.json  project  pslg.cpp  pslg.hpp  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp
CGAL_Qt5_moc_and_resources_autogen/: mocs_compilation.cpp
CGAL_Qt5_moc_and_resources_autogen/34EZIPZFLO/: moc_DemosMainWindow.cpp  moc_GraphicsItem.cpp  moc_GraphicsViewInput.cpp  moc_GraphicsViewNavigation.cpp  moc_camera.cpp  moc_frame.cpp  moc_image_interface.cpp  moc_keyFrameInterpolator.cpp  moc_manipulatedCameraFrame.cpp  moc_manipulatedFrame.cpp  moc_qglviewer.cpp
CGAL_Qt5_moc_and_resources_autogen/UA37WZWF7Q/: moc_DemosMainWindow.cpp  moc_GraphicsItem.cpp  moc_GraphicsViewInput.cpp  moc_GraphicsViewNavigation.cpp  moc_camera.cpp  moc_frame.cpp  moc_image_interface.cpp  moc_keyFrameInterpolator.cpp  moc_manipulatedCameraFrame.cpp  moc_manipulatedFrame.cpp  moc_qglviewer.cpp
algorithms/: cdt_custom.hpp  ex.cpp  opt_algorithms.cpp  opt_algorithms.hpp  pslg.cpp
best results/: ortho_100_bd1e4a14.solution.json  ortho_10_d2723dcc.solution.json  ortho_150_53eb4022.solution.json  ortho_20_5a9e8244.solution.json  ortho_20_e2aff192.solution.json  ortho_250_3b977f7e.solution.json  ortho_250_6e6a66c2.solution.json  ortho_40_56a6f463.solution.json  ortho_40_df58ce3b.solution.json  ortho_60_5c5796a0.solution.json  ortho_60_c423f527.solution.json  ortho_60_f744490d.solution.json  ortho_80_06ee55d4.solution.json  point-set_100_0245ce31.solution.json  point-set_100_05594822.solution.json  point-set_100_dd67678e.solution.json  point-set_10_13860916.solution.json  point-set_10_4bcb7c21.solution.json  point-set_10_7451a2a9.solution.json  point-set_10_97578aae.solution.json  point-set_10_ae0fff93.solution.json  point-set_10_c04b0024.solution.json  point-set_10_d009159f.solution.json  point-set_10_f999dc7f.solution.json  point-set_150_1fb326cf.solution.json  point-set_150_20bcb550.solution.json  point-set_150_982c9ab3.solution.json  point-set_150_b26a2c80.solution.json  point-set_20_0c4009d9.solution.json  point-set_20_34a047f7.solution.json  point-set_20_41c48315.solution.json  point-set_20_54ab0b47.solution.json  point-set_20_5868538a.solution.json  point-set_20_72cd2066.solution.json  point-set_20_fa3fd7e0.solution.json  point-set_250_3c338713.solution.json  point-set_250_93dd622a.solution.json  point-set_40_1b92b629.solution.json  point-set_40_8cbf31aa.solution.json  point-set_40_9451c229.solution.json  (+110 more)
includes/graphics/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
includes/utils/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tests/: data.json  data2.json  data3.json  data4.json  reading_json_test.cpp  test_draw.cpp  tets_delaunay.cpp
tests/competition/: README.md
tests/test_instances/: instance_test_1.json  instance_test_10.json  instance_test_11.json  instance_test_12.json  instance_test_13.json  instance_test_14.json  instance_test_15.json  instance_test_16.json  instance_test_2.json  instance_test_3.json  instance_test_4.json  instance_test_5.json  instance_test_6.json  instance_test_7.json  instance_test_8.json  instance_test_9.json
tests/tests/: instance_1.json  instance_2.json  instance_3.json  instance_4.json  instance_5.json  instance_6.json  instance_7.json
